bindings/c/whiteout_m2.h

typedef struct whiteout_M2Extent whiteout_M2Extent;
typedef struct whiteout_M2SkinSection whiteout_M2SkinSection;
typedef struct whiteout_M2Batch whiteout_M2Batch;
typedef struct whiteout_M2ShadowBatch whiteout_M2ShadowBatch;
typedef struct whiteout_M2SkinProfile whiteout_M2SkinProfile;
typedef struct whiteout_M2GlobalFlags whiteout_M2GlobalFlags;
typedef struct whiteout_M2GlobalSequence whiteout_M2GlobalSequence;
typedef struct whiteout_M2Sequence whiteout_M2Sequence;
/* ── M2SkinProfile ─────────────────────────────────────────────── */

whiteout_M2SkinProfile* whiteout_m2_M2SkinProfile_new(void);
void whiteout_m2_M2SkinProfile_delete(whiteout_M2SkinProfile* self);
size_t whiteout_m2_M2SkinProfile_get_vertices_count(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_resize_vertices(whiteout_M2SkinProfile* self, size_t count);
const uint16_t* whiteout_m2_M2SkinProfile_get_vertices_data(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_assign_vertices(whiteout_M2SkinProfile* self, const uint16_t* data, size_t count);
size_t whiteout_m2_M2SkinProfile_get_indices_count(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_resize_indices(whiteout_M2SkinProfile* self, size_t count);
const uint16_t* whiteout_m2_M2SkinProfile_get_indices_data(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_assign_indices(whiteout_M2SkinProfile* self, const uint16_t* data, size_t count);
size_t whiteout_m2_M2SkinProfile_get_submeshes_count(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_resize_submeshes(whiteout_M2SkinProfile* self, size_t count);
whiteout_M2SkinSection* whiteout_m2_M2SkinProfile_get_submeshes_at(whiteout_M2SkinProfile* self, size_t index);
size_t whiteout_m2_M2SkinProfile_get_batches_count(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_resize_batches(whiteout_M2SkinProfile* self, size_t count);
whiteout_M2Batch* whiteout_m2_M2SkinProfile_get_batches_at(whiteout_M2SkinProfile* self, size_t index);
uint32_t whiteout_m2_M2SkinProfile_get_lodVertexBase(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_set_lodVertexBase(whiteout_M2SkinProfile* self, uint32_t value);
size_t whiteout_m2_M2SkinProfile_get_shadowBatches_count(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_resize_shadowBatches(whiteout_M2SkinProfile* self, size_t count);
whiteout_M2ShadowBatch* whiteout_m2_M2SkinProfile_get_shadowBatches_at(whiteout_M2SkinProfile* self, size_t index);
/* ── M2GlobalFlags ─────────────────────────────────────────────── */

whiteout_M2GlobalFlags* whiteout_m2_M2GlobalFlags_new(void);
void whiteout_m2_M2GlobalFlags_delete(whiteout_M2GlobalFlags* self);
int32_t whiteout_m2_M2GlobalFlags_get_value(const whiteout_M2GlobalFlags* self);
void whiteout_m2_M2GlobalFlags_set_value(whiteout_M2GlobalFlags* self, int32_t value);
/* ── M2GlobalSequence ─────────────────────────────────────────────── */

whiteout_M2GlobalSequence* whiteout_m2_M2GlobalSequence_new(void);
void whiteout_m2_M2GlobalSequence_delete(whiteout_M2GlobalSequence* self);
uint32_t whiteout_m2_M2GlobalSequence_get_timestamp(const whiteout_M2GlobalSequence* self);
void whiteout_m2_M2GlobalSequence_set_timestamp(whiteout_M2GlobalSequence* self, uint32_t value);
/* ── M2Sequence ─────────────────────────────────────────────── */

whiteout_M2Sequence* whiteout_m2_M2Sequence_new(void);
void whiteout_m2_M2Sequence_delete(whiteout_M2Sequence* self);
uint16_t whiteout_m2_M2Sequence_get_id(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_id(whiteout_M2Sequence* self, uint16_t value);
uint16_t whiteout_m2_M2Sequence_get_variationIndex(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_variationIndex(whiteout_M2Sequence* self, uint16_t value);
uint32_t whiteout_m2_M2Sequence_get_duration(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_duration(whiteout_M2Sequence* self, uint32_t value);
float whiteout_m2_M2Sequence_get_movespeed(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_movespeed(whiteout_M2Sequence* self, float value);
int32_t whiteout_m2_M2Sequence_get_flags(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_flags(whiteout_M2Sequence* self, int32_t value);
int16_t whiteout_m2_M2Sequence_get_frequency(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_frequency(whiteout_M2Sequence* self, int16_t value);
uint16_t whiteout_m2_M2Sequence_get_padding(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_padding(whiteout_M2Sequence* self, uint16_t value);
uint32_t whiteout_m2_M2Sequence_get_replayMin(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_replayMin(whiteout_M2Sequence* self, uint32_t value);
uint32_t whiteout_m2_M2Sequence_get_replayMax(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_replayMax(whiteout_M2Sequence* self, uint32_t value);
uint16_t whiteout_m2_M2Sequence_get_blendTimeIn(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_blendTimeIn(whiteout_M2Sequence* self, uint16_t value);
uint16_t whiteout_m2_M2Sequence_get_blendTimeOut(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_blendTimeOut(whiteout_M2Sequence* self, uint16_t value);
whiteout_M2Extent* whiteout_m2_M2Sequence_get_bounding(whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_bounding(whiteout_M2Sequence* self, const whiteout_M2Extent* value);
int16_t whiteout_m2_M2Sequence_get_variationNext(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_variationNext(whiteout_M2Sequence* self, int16_t value);
uint16_t whiteout_m2_M2Sequence_get_aliasNext(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_aliasNext(whiteout_M2Sequence* self, uint16_t value);