bindings/java/src/main/java/whiteout/m2/internal/Native.java


    // -- M2SkinProfile --
    public static final MethodHandle whiteout_m2_M2SkinProfile_new = find(
        "whiteout_m2_M2SkinProfile_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_delete = find(
        "whiteout_m2_M2SkinProfile_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_vertices_count = find("whiteout_m2_M2SkinProfile_get_vertices_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_resize_vertices = find("whiteout_m2_M2SkinProfile_resize_vertices", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_vertices_data = find("whiteout_m2_M2SkinProfile_get_vertices_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_assign_vertices = find("whiteout_m2_M2SkinProfile_assign_vertices", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_indices_count = find("whiteout_m2_M2SkinProfile_get_indices_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_resize_indices = find("whiteout_m2_M2SkinProfile_resize_indices", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_indices_data = find("whiteout_m2_M2SkinProfile_get_indices_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_assign_indices = find("whiteout_m2_M2SkinProfile_assign_indices", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_submeshes_count = find("whiteout_m2_M2SkinProfile_get_submeshes_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_resize_submeshes = find("whiteout_m2_M2SkinProfile_resize_submeshes", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_submeshes_at = find("whiteout_m2_M2SkinProfile_get_submeshes_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_batches_count = find("whiteout_m2_M2SkinProfile_get_batches_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_resize_batches = find("whiteout_m2_M2SkinProfile_resize_batches", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_batches_at = find("whiteout_m2_M2SkinProfile_get_batches_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_lodVertexBase = find("whiteout_m2_M2SkinProfile_get_lodVertexBase", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_set_lodVertexBase = find("whiteout_m2_M2SkinProfile_set_lodVertexBase", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_shadowBatches_count = find("whiteout_m2_M2SkinProfile_get_shadowBatches_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinProfile_resize_shadowBatches = find("whiteout_m2_M2SkinProfile_resize_shadowBatches", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2SkinProfile_get_shadowBatches_at = find("whiteout_m2_M2SkinProfile_get_shadowBatches_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- M2GlobalFlags --
    public static final MethodHandle whiteout_m2_M2GlobalFlags_new = find(
        "whiteout_m2_M2GlobalFlags_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2GlobalFlags_delete = find(
        "whiteout_m2_M2GlobalFlags_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2GlobalFlags_get_value = find("whiteout_m2_M2GlobalFlags_get_value", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2GlobalFlags_set_value = find("whiteout_m2_M2GlobalFlags_set_value", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- M2GlobalSequence --
    public static final MethodHandle whiteout_m2_M2GlobalSequence_new = find(
        "whiteout_m2_M2GlobalSequence_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2GlobalSequence_delete = find(
        "whiteout_m2_M2GlobalSequence_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2GlobalSequence_get_timestamp = find("whiteout_m2_M2GlobalSequence_get_timestamp", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2GlobalSequence_set_timestamp = find("whiteout_m2_M2GlobalSequence_set_timestamp", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- M2Sequence --
    public static final MethodHandle whiteout_m2_M2Sequence_new = find(
        "whiteout_m2_M2Sequence_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_delete = find(
        "whiteout_m2_M2Sequence_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_get_id = find("whiteout_m2_M2Sequence_get_id", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_id = find("whiteout_m2_M2Sequence_set_id", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_variationIndex = find("whiteout_m2_M2Sequence_get_variationIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_variationIndex = find("whiteout_m2_M2Sequence_set_variationIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_duration = find("whiteout_m2_M2Sequence_get_duration", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_duration = find("whiteout_m2_M2Sequence_set_duration", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_movespeed = find("whiteout_m2_M2Sequence_get_movespeed", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_movespeed = find("whiteout_m2_M2Sequence_set_movespeed", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_flags = find("whiteout_m2_M2Sequence_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_flags = find("whiteout_m2_M2Sequence_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_frequency = find("whiteout_m2_M2Sequence_get_frequency", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_frequency = find("whiteout_m2_M2Sequence_set_frequency", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_padding = find("whiteout_m2_M2Sequence_get_padding", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_padding = find("whiteout_m2_M2Sequence_set_padding", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_replayMin = find("whiteout_m2_M2Sequence_get_replayMin", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_replayMin = find("whiteout_m2_M2Sequence_set_replayMin", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_replayMax = find("whiteout_m2_M2Sequence_get_replayMax", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_replayMax = find("whiteout_m2_M2Sequence_set_replayMax", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_blendTimeIn = find("whiteout_m2_M2Sequence_get_blendTimeIn", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_blendTimeIn = find("whiteout_m2_M2Sequence_set_blendTimeIn", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_blendTimeOut = find("whiteout_m2_M2Sequence_get_blendTimeOut", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_blendTimeOut = find("whiteout_m2_M2Sequence_set_blendTimeOut", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_bounding = find("whiteout_m2_M2Sequence_get_bounding", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_bounding = find("whiteout_m2_M2Sequence_set_bounding", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_get_variationNext = find("whiteout_m2_M2Sequence_get_variationNext", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_variationNext = find("whiteout_m2_M2Sequence_set_variationNext", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Sequence_get_aliasNext = find("whiteout_m2_M2Sequence_get_aliasNext", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Sequence_set_aliasNext = find("whiteout_m2_M2Sequence_set_aliasNext", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
